# rgu-labs-term4-probability-modeling

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: task_runner.hpp
qt/lab2/infection_simulation/: CMakeLists.txt
qt/lab2/infection_simulation/qml/: AppButton.qml  FilePickerDialog.qml  GraphView.qml  Main.qml  ModeTab.qml  ParamSlider.qml  SearchButton.qml  SectionLabel.qml  StatBadge.qml  StatDivider.qml  Theme.qml
qt/lab2/infection_simulation/src/: simulation.cpp  simulation_controller.cpp
qt/lab2/rumors_simulation/: CMakeLists.txt
qt/lab2/rumors_simulation/qml/: AppButton.qml  ExperimentGraphView.qml  Main.qml  StatDivider.qml
qt/lab2/rumors_simulation/src/: simulation_controller.cpp
src/: 1113.cpp  1115.cpp  1119.cpp  1120.cpp  1121.cpp  1122.cpp  1126.cpp  1127.cpp  1128.cpp  1129.cpp  1130.cpp  1132.cpp  1145.cpp  116.cpp  118.cpp  121.cpp  122.cpp  123.cpp  2157.cpp  2158.cpp  2159.cpp  2161.cpp  2162.cpp  2163.cpp  2165.cpp  2167.cpp  2168.cpp  2169.cpp  2170.cpp  2268.cpp  2269.cpp  232.cpp  31.cpp
standalones/lab2/infection_simulation/qml/: GraphView.qml  Main.qml  ParamSlider.qml  SectionLabel.qml  StatBadge.qml
standalones/lab2/infection_simulation/src/: main.cpp  simulation.cpp  simulation.hpp  simulation_controller.hpp
standalones/lab2/rumors_simulation/qml/: ExperimentGraphView.qml  Main.qml  ParamSlider.qml  StatBadge.qml
standalones/lab2/rumors_simulation/src/: main.cpp  simulation.cpp  simulation.hpp  simulation_controller.hpp
standalones/lab3/factorio_simulation/: CMakeLists.txt  ElectronicCircuit.cfg
standalones/lab3/factorio_simulation/src/: assembler.cpp  assembler.hpp  config_parser.cpp  config_parser.hpp  inventory.cpp  inventory.hpp  main.cpp  quality.cpp  quality.hpp  recipe.cpp  recipe.hpp  recycler.cpp  recycler.hpp  reporter.cpp  reporter.hpp  simulation.cpp  simulation.hpp
standalones/lab3/tree_simulation/: CMakeLists.txt  example_custom.txt  example_global.txt
standalones/lab3/tree_simulation/qml/: AppButton.qml  FilePickerDialog.qml  HistogramView.qml  Main.qml  ParamSlider.qml  StatBadge.qml  Theme.qml  TreeView.qml  qmldir
standalones/lab3/tree_simulation/src/: TreeConfig.cpp  TreeConfig.hpp  TreeController.cpp  TreeController.hpp  TreeSimulation.cpp  TreeSimulation.hpp  main.cpp
standalones/lab4/drunkard/: CMakeLists.txt
standalones/lab4/drunkard/qml/: AppButton.qml  Main.qml  ModeTab.qml  ProbabilityChart.qml  StreetView.qml  Theme.qml  qmldir
standalones/lab4/drunkard/src/: drunk_walk.cpp  drunk_walk.hpp  drunk_walk_controller.cpp  drunk_walk_controller.hpp  main.cpp
standalones/template/: README.md  docker-compose.yml
standalones/template/backend/: CMakeLists.txt  Dockerfile  config.json
standalones/template/backend/src/: main.cpp
standalones/template/frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
standalones/template/frontend/src/: App.vue  style.css
standalones/template/frontend/src/api/: simulation.js
standalones/template/frontend/src/components/: LineChart.vue
standalones/template/frontend/src/router/: index.js
standalones/template/frontend/src/stores/: simulation.js
standalones/template/frontend/src/views/: HomeView.vue
